# InstantAttend-GodMode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  app.py  config.py  conftest.py  deploy.sh  docker-compose.yml  gunicorn.conf.py  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: export_report.py  seed_db.py
static/css/: style.css
static/js/: main.js
templates/: admin.html  home.html
tests/: test_app.py  test_db.py
