[metadata]
name = InstantAttend-GodMode
version = 2.0.0
description = Real-time face recognition attendance system
author = BiplabaKrSamal
author_email = biplabasamal@github.com
url = https://github.com/BiplabaKrSamal/InstantAttend-GodMode
license = MIT
keywords = face-recognition, attendance, flask, opencv, machine-learning
classifiers =
    Programming Language :: Python :: 3.11
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.10

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[flake8]
max-line-length = 120
exclude = .git,__pycache__,venv,.venv,build,dist
ignore = E501,W503
